--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         </form>
     </div>
 </nav>
+<div class="container"><div class="col-4 offset-4">
 <h1>Hei Sunniva!!!</h1>
+</div> </div>
 </body>
 </html>
